[gd_scene load_steps=37 format=2]

[ext_resource path="res://player/r3.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/r2.png" type="Texture" id=3]
[ext_resource path="res://player/clear.png" type="Texture" id=4]
[ext_resource path="res://player/r4.png" type="Texture" id=5]
[ext_resource path="res://player/r5.png" type="Texture" id=6]
[ext_resource path="res://player/r1.png" type="Texture" id=7]
[ext_resource path="res://player/dead9.png" type="Texture" id=8]
[ext_resource path="res://player/dead8.png" type="Texture" id=9]
[ext_resource path="res://player/dead13.png" type="Texture" id=10]
[ext_resource path="res://player/dead11.png" type="Texture" id=11]
[ext_resource path="res://player/r6.png" type="Texture" id=12]
[ext_resource path="res://player/fall.png" type="Texture" id=13]
[ext_resource path="res://player/jump.png" type="Texture" id=14]
[ext_resource path="res://asset/controlerright.png" type="Texture" id=15]
[ext_resource path="res://asset/controlerleft.png" type="Texture" id=16]
[ext_resource path="res://touchscreenjoystick.tscn" type="PackedScene" id=17]
[ext_resource path="res://asset/background.png" type="Texture" id=22]
[ext_resource path="res://player/dead1.png" type="Texture" id=23]
[ext_resource path="res://player/dead3.png" type="Texture" id=24]
[ext_resource path="res://player/dead4.png" type="Texture" id=25]
[ext_resource path="res://player/dead7.png" type="Texture" id=26]
[ext_resource path="res://player/dead2.png" type="Texture" id=27]
[ext_resource path="res://player/dead5.png" type="Texture" id=28]
[ext_resource path="res://player/dead6.png" type="Texture" id=29]
[ext_resource path="res://player/dead12.png" type="Texture" id=30]
[ext_resource path="res://player/dead10.png" type="Texture" id=31]
[ext_resource path="res://player/Camera2D.gd" type="Script" id=32]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.5524
height = 161.906

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 98 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 98 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 98 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 98 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 98 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 31 ), ExtResource( 11 ), ExtResource( 30 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 20.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "fall",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 20.2272
height = 138.694

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -20.8777, 40.4979 )
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="chara" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( 4.50222, -0.176331 )
scale = Vector2( 2.00406, 2.00406 )
frames = SubResource( 7 )
animation = "idle"
frame = 4
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 32 )

[node name="screen_shake" type="Timer" parent="Camera2D"]
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 0.05 )

[node name="background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -800, -910 )
scale = Vector2( 1.14017, 1.14017 )
texture = ExtResource( 22 )
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -20, 40 )
shape = SubResource( 8 )

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="Hud"]

[node name="left" type="TouchScreenButton" parent="Hud/Node2D"]
position = Vector2( 60, 340 )
scale = Vector2( 24, 20 )
normal = ExtResource( 15 )

[node name="right" type="TouchScreenButton" parent="Hud/Node2D"]
position = Vector2( 220, 340 )
scale = Vector2( 24, 20 )
normal = ExtResource( 16 )

[node name="jump" type="TouchScreenButton" parent="Hud/Node2D"]
position = Vector2( 560, 440 )
rotation = -1.5708
scale = Vector2( 20, 24 )
normal = ExtResource( 16 )

[node name="touchscreenjoystick" parent="Hud/Node2D" instance=ExtResource( 17 )]
position = Vector2( 800, 330 )
[connection signal="timeout" from="Camera2D/screen_shake" to="Camera2D" method="_on_screen_shake_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="pressed" from="Hud/Node2D/left" to="." method="_on_left_pressed"]
[connection signal="released" from="Hud/Node2D/left" to="." method="_on_left_released"]
[connection signal="pressed" from="Hud/Node2D/right" to="." method="_on_right_pressed"]
[connection signal="released" from="Hud/Node2D/right" to="." method="_on_right_released"]
[connection signal="pressed" from="Hud/Node2D/jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="Hud/Node2D/jump" to="." method="_on_jump_released"]
